fix: dark mode for version selector

--- a/themes/api-platform/assets/css/main.css
+++ b/themes/api-platform/assets/css/main.css
@@ -5209,6 +5209,16 @@ kbd.DocSearch-Commands-Key) {
   background-color: rgb(78 183 188 / var(--tw-bg-opacity));
 }
 
+:is(.dark .dark\:bg-blue-dark) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 85 90 / var(--tw-bg-opacity));
+}
+
+:is(.dark .dark\:bg-blue) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 153 161 / var(--tw-bg-opacity));
+}
+
 :is(.dark .dark\:stroke-blue-black) {
   stroke: #0d262b;
 }
@@ -5263,6 +5273,11 @@ kbd.DocSearch-Commands-Key) {
 
 :is(.dark .dark\:text-white\/80) {
   color: rgb(255 255 255 / 0.8);
+}
+
+:is(.dark .dark\:text-text-primary-dark) {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
 :is(.dark .dark\:brightness-90) {
